Homepage nav spacing fix
This corrects a spacing issue on can-we widgets that was introduced
when we reduced the margin below navs.

--- a/css/scu-less/partials/can-we.less
+++ b/css/scu-less/partials/can-we.less
@@ -13,19 +13,21 @@
   background-size: cover;
   position:relative;
   margin-bottom:80px;
+  
+  
   .site-header + & {
     margin-top: -20px;
     @media (min-width: @screen-sm-min) {
-      margin-top: -55px;
+      margin-top: -30px;
     }
     @media (min-width: @screen-md-min) {
-      margin-top: -78px;
+      margin-top: -53px;
     }
     @media (min-width: @screen-lg-min) {
-      margin-top: -80px;
+      margin-top: -55px;
     }
   }
-  
+    
   &.feature {
     .container {
       min-height: @can-we-xs-height;
