--- a/css/scu-less/partials/heroes.less
+++ b/css/scu-less/partials/heroes.less
@@ -161,7 +161,6 @@
         text-shadow: 0 -2px 3px rgba(0,0,0,.22);
         .serif-font(bold);
       }
-<<<<<<< HEAD
 	    @media (min-width: @screen-sm-min) {
 	      &>h1 {
 	        font-size: 90px;
@@ -172,16 +171,11 @@
 	        font-size: 120px;
 	      }
 	    }
-=======
->>>>>>> origin/master
     }
     
     .hero-body {
       .strip {
-<<<<<<< HEAD
         height: @hero-xs-height;
-=======
->>>>>>> origin/master
         padding: 15px 20px;
         background-color: #1b1b1b;
         /* This Flexbox styling should work in modern browsers, but IE8 and IE9 won't vertically center text if there's one line. */
@@ -212,10 +206,7 @@
           }
         }
         @media (min-width: @screen-sm-min) {
-<<<<<<< HEAD
           height: @hero-sm-height;
-=======
->>>>>>> origin/master
           h5 {
             font-size: 15px;
           }
@@ -227,37 +218,16 @@
           }
         }
         @media (min-width: @screen-md-min) {
-<<<<<<< HEAD
           height: @hero-md-height;
-=======
->>>>>>> origin/master
           padding: 35px 20px;
           p, ol, ul {
             font-size: 15px;
           }
         }
         @media (min-width: @screen-lg-min) {
-<<<<<<< HEAD
           height: @hero-lg-height;
-=======
->>>>>>> origin/master
         }
       }
     }
-  }
-}
-
-// 'Project Title' on pages with hero images
-
-.hero.module+.project-title {
-	background-color: rgba(0,0,0,.7);
-  margin-top: -8.7em;
-  margin-bottom:2em;
-  position: relative;
-  h1 {
-	  color: #fff;
-	  font-size: 60px;
-  }
-  .container {
   }
 }
